# jp2library

./: CMakeLists.txt  README.md
jni/: .gitignore  CMakeLists.txt  jp12serial_compat.c  jp12serial_compat.h
src/: .gitignore  CMakeLists.txt  jp2library.c  jp2library.h  osapi.h  osapi_linux.c
tests/: CMakeLists.txt  common.c  test.h  test_001.c
tools/: .gitignore  CMakeLists.txt  jp2cli.c  jp2dump.c  jp2segments.c
